Release 2.6.0